--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="assets/css/personalizado.css">
     <title>Controle Financeiro</title>
 </head>
 
-
-
 <body>
+    <header>
 
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
