--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/favicon-32x32.png" type="image/x-icon">
+    <link rel="icon" href="assets/img/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="assets/img/favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="manifest" href="assets/img/site.webmanifest">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="assets/css/personalizado.css">
-    
+
     <title>Controle Financeiro</title>
 </head>
 
 <body>
-    <header>
-        
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
+    <div class="caixa">
+        <header>
+            <div class="img-wrapper">
+                <img src="assets/img/background.jpg">
+            </div>
+            <div class="banner">
+                <h1>Gestão Financeira</h1>
+                <h2>Receitas & Débitos</h2>
+                <p>Gustavo Santos & Nicolas Bicalho</p>
+                <button>Saiba mais</button>
+            </div>
+        </header>
+    </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
