:package: Menu sidebar

--- a/index.html
+++ b/index.html
@@ -2,34 +2,69 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/img/favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="assets/img/favicon-16x16.png" type="image/png" sizes="16x16">
-    <link rel="manifest" href="assets/img/site.webmanifest">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/all.css">
-    <link rel="stylesheet" href="assets/css/personalizado.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="assets/img/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="assets/img/favicon-16x16.png" type="image/png" sizes="16x16">
+  <link rel="manifest" href="assets/img/site.webmanifest">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/all.css">
+  <link rel="stylesheet" href="assets/css/personalizado.css">
 
-    <title>Controle Financeiro</title>
+  <title>Controle Financeiro</title>
 </head>
 
 <body>
-    <div class="caixa">
-        <header>
-            <div class="img-wrapper">
-                <img src="assets/img/background.jpg">
-            </div>
-            <div class="banner">
-                <h1>Gestão Financeira</h1>
-                <h2>Receitas & Débitos</h2>
-                <p>Gustavo Santos & Nicolas Bicalho</p>
-                <button>Saiba mais</button>
-            </div>
-        </header>
+  <div class="caixa">
+    <div class="hamburger">
+      <div class="line" id="line1"></div>
+      <div class="line" id="line2"></div>
+      <div class="line" id="line3"></div>
     </div>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+
+    <header>
+      <div class="img-wrapper">
+        <img src="assets/img/background.jpg">
+      </div>
+      <div class="banner">
+        <h1>Gestão Financeira</h1>
+        <h2>Crédito & Débito</h2>
+        <p>Gustavo Santos & Nicolas Bicalho</p>
+        <button>Saiba mais</button>
+      </div>
+    </header>
+
+    <div class="sidebar">
+      <nav>
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="#" class="menu-link">Home</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Administrador</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Categoria</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Conta</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Lançamento</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Usuário</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="social-media">
+        <a href="https://github.com/gssantos94/Controle-Financeiro-HTML.git" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+    </div>
+  </div>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/personalizado.js"></script>
 </body>
 
 </html>
