:package: sessão de tecnologias

--- a/index.html
+++ b/index.html
@@ -16,26 +16,25 @@
 </head>
 
 <body>
+  <header>
+    <div class="img-wrapper">
+      <img src="assets/img/background.jpg">
+    </div>
+    <div class="banner">
+      <h1>Gestão Financeira</h1>
+      <h2>Crédito & Débito</h2>
+      <p>Gustavo Santos & Nicolas Bicalho</p>
+      <button>Saiba mais</button>
+    </div>
+  </header>
+
   <div class="caixa">
     <div class="hamburger">
       <div class="line" id="line1"></div>
       <div class="line" id="line2"></div>
       <div class="line" id="line3"></div>
     </div>
-
-    <header>
-      <div class="img-wrapper">
-        <img src="assets/img/background.jpg">
-      </div>
-      <div class="banner">
-        <h1>Gestão Financeira</h1>
-        <h2>Crédito & Débito</h2>
-        <p>Gustavo Santos & Nicolas Bicalho</p>
-        <button>Saiba mais</button>
-      </div>
-    </header>
-
-    <div class="sidebar">
+    <aside class="sidebar">
       <nav>
         <ul class="menu">
           <li class="menu-item">
@@ -59,9 +58,83 @@
         </ul>
       </nav>
       <div class="social-media">
-        <a href="https://github.com/gssantos94/Controle-Financeiro-HTML.git" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/gssantos94/Controle-Financeiro-HTML.git" target="_blank"><i
+            class="fab fa-github"></i></a>
       </div>
-    </div>
+    </aside>
+
+    <section class="sessao-tecnologias">
+      <div class="sessao-header">
+        <h1>Tecnologias Utilizadas</h1>
+      </div>
+      <div class="tecnologias">
+        <div class="tecnologia">
+          <div class="tecnologia-header">
+            <i class="fab fa-css3-alt"></i>
+            <h3>CSS</h3>
+          </div>
+          <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
+              velit unde?</p>
+          </div>
+        </div>
+        <div class="tecnologia">
+          <div class="tecnologia-header">
+            <i class="fab fa-bootstrap"></i>
+            <h3>Bootstrap 5</h3>
+          </div>
+          <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
+              velit unde?</p>
+          </div>
+        </div>
+        <div class="tecnologia">
+          <div class="tecnologia-header">
+            <i class="fab fa-html5"></i>
+            <h3>HTML 5</h3>
+          </div>
+          <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
+              velit unde?</p>
+          </div>
+        </div>
+        <div class="tecnologia">
+          <div class="tecnologia-header">
+            <i class="fab fa-java"></i>
+            <h3>Java Web</h3>
+          </div>
+          <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
+              velit unde?</p>
+          </div>
+        </div>
+        <div class="tecnologia">
+          <div class="tecnologia-header">
+            <i class="fab fa-js"></i>
+            <h3>Javascript</h3>
+          </div>
+          <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
+              velit unde?</p>
+          </div>
+        </div>
+        <div class="tecnologia">
+          <div class="tecnologia-header">
+            <i class="fas fa-database"></i>
+            <h3>MySQL</h3>
+          </div>
+          <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
+              velit unde?</p>
+          </div>
+        </div>
+        <div class="tecnologia-img-wrapper">
+          <img src="assets/img/tecnologias.svg">
+        </div>
+      </div>
+    </section>
+
+
   </div>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/personalizado.js"></script>
