--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <nav>
         <ul class="menu">
           <li class="menu-item">
-            <a href="" class="menu-link login"><i class="fas fa-sign-in-alt"></i> Login</i></a>
+            <a href="login.html" class="menu-link login"><i class="fas fa-sign-in-alt"></i> Login</i></a>
           </li>
           <li class="menu-item">
             <a href="#" class="menu-link">Home</a>
@@ -75,73 +75,66 @@
       <div class="sessao-header">
         <h1>Tecnologias Utilizadas</h1>
       </div>
-      <div class="tecnologias">
-        <div class="tecnologia">
-          <div class="tecnologia-header">
+      <div class="container-flud text-center" >
+        <div class="row">
+          <div class="offset-md-2 col-md-3 text-md-start">
+            <div class="tecnologia-header">
             <i class="fab fa-css3-alt"></i>
-            <h3>CSS</h3>
+            <h3>CSS</h3></div>
+            <div class="tecnologia-text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi velit
+              unde?</p></div>
           </div>
-          <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p>
-          </div>
-        </div>
-        <div class="tecnologia">
-          <div class="tecnologia-header">
+          <div class="offset-md-2 col-md-3 text-md-start">
+            <div class="tecnologia-header">
             <i class="fab fa-bootstrap"></i>
-            <h3>Bootstrap 5</h3>
-          </div>
-          <div class="tecnologia-text">
+            <h3>Bootstrap 5</h3></div>
+            <div class="tecnologia-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p>
+              velit unde?</p></div>
           </div>
         </div>
-        <div class="tecnologia">
-          <div class="tecnologia-header">
+        <div class="row">
+          <div class="offset-md-1 col-md-3 text-md-start">
+            <div class="tecnologia-header">
             <i class="fab fa-html5"></i>
-            <h3>HTML 5</h3>
-          </div>
-          <div class="tecnologia-text">
+            <h3>HTML 5</h3></div>
+            <div class="tecnologia-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p>
+              velit unde?</p></div>
           </div>
-        </div>
-        <div class="tecnologia">
-          <div class="tecnologia-header">
+          <div class="offset-md-4 col-md-3 text-md-start">
+            <div class="tecnologia-header">
             <i class="fab fa-java"></i>
-            <h3>Java Web</h3>
-          </div>
-          <div class="tecnologia-text">
+            <h3>Java Web</h3></div>
+            <div class="tecnologia-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p>
+              velit unde?</p></div>
           </div>
         </div>
-        <div class="tecnologia">
-          <div class="tecnologia-header">
+        <div class="row">
+          <div class="offset-md-2 col-md-3 text-md-start">
+            <div class="tecnologia-header">
             <i class="fab fa-js"></i>
-            <h3>Javascript</h3>
-          </div>
-          <div class="tecnologia-text">
+            <h3>Javascript</h3></div>
+            <div class="tecnologia-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p>
+              velit unde?</p></div>
           </div>
-        </div>
-        <div class="tecnologia">
-          <div class="tecnologia-header">
+          <div class="offset-md-2 col-md-3 text-md-start">
+            <div class="tecnologia-header">
             <i class="fas fa-database"></i>
-            <h3>MySQL</h3>
-          </div>
-          <div class="tecnologia-text">
+            <h3>MySQL</h3></div>
+            <div class="tecnologia-text">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p>
+              velit unde?</p></div>
           </div>
-        </div>
-        <div class="tecnologia-img-wrapper">
-          <img src="assets/img/tecnologias.svg">
         </div>
       </div>
+
     </section>
     <!-- FINAL DO CONTEÚDO -->
+
     <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE RODAPÉ -->
     <footer>
       <div class="footer-content">
