:up: Atualização no nome das paginas no js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
 
-  <div class="caixa">
+  <div class="pag-home">
     <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE MENU -->
     <div class="hamburger">
       <div class="line" id="line1"></div>
