--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <main class="form-signin text-center">
+  <main class="pag-login text-center">
     <div class="hamburger">
       <div class="line" id="line1"></div>
       <div class="line" id="line2"></div>
