--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
     </div>
     <div class="banner">
       <h1>Gestão Financeira</h1>
-      <h2>Crédito & Débito</h2>
+      <h2>Créd & Déb</h2>
       <p>Gustavo Santos & Nicolas Bicalho</p>
       <a type="button" href="#tecnologias">Saiba mais</a>
     </div>
   </header>
-
-
   <div class="pag-home">
     <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE MENU -->
     <div class="hamburger">
@@ -75,59 +73,65 @@
       <div class="sessao-header">
         <h1>Tecnologias Utilizadas</h1>
       </div>
-      <div class="container-flud text-center" >
+      <div class="container text-center">
         <div class="row">
-          <div class="offset-md-2 col-md-3 text-md-start">
+          <div class="offset-md-1 col-md-5 text-md-start">
             <div class="tecnologia-header">
-            <i class="fab fa-css3-alt"></i>
-            <h3>CSS</h3></div>
+              <i class="fab fa-css3-alt" style="color: #0e76a8;"></i>
+              <h3>CSS</h3>
+            </div>
             <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi velit
-              unde?</p></div>
+              <p>É a sigla para Cascading Style Sheets, ou seja, Folhas de Estilo em Cascatas. É uma maneira de dar estilo ao código criado por linguagens como HTML, XML ou XHTML, entre outras.</p>
+            </div>
           </div>
-          <div class="offset-md-2 col-md-3 text-md-start">
+          <div class="col-md-5 text-md-start">
             <div class="tecnologia-header">
-            <i class="fab fa-bootstrap"></i>
-            <h3>Bootstrap 5</h3></div>
+              <i class="fab fa-bootstrap" style="color: #533b77;"></i>
+              <h3>Bootstrap 5</h3>
+            </div>
             <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p></div>
+              <p>É uma ferramenta gratuita para desenvolvimento Web. Crie sites e aplicações completas com nosso sistemas de grid responsivo, componentes pré-construídos, entre outras features.</p>
+            </div>
           </div>
         </div>
         <div class="row">
-          <div class="offset-md-1 col-md-3 text-md-start">
+          <div class="offset-md-1 col-md-5 text-md-start">
             <div class="tecnologia-header">
-            <i class="fab fa-html5"></i>
-            <h3>HTML 5</h3></div>
+              <i class="fab fa-html5" style="color: #e55c25;"></i>
+              <h3>HTML 5</h3>
+            </div>
             <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p></div>
+              <p>O HTML5, sigla para Hypertext Markup Language, é uma linguagem de marcação de hipertexto para apresentar e estruturar o conteúdo de sites na  web HTML5 é a nova versão do HTML4</p>
+            </div>
           </div>
-          <div class="offset-md-4 col-md-3 text-md-start">
+          <div class="col-md-5 text-md-start">
             <div class="tecnologia-header">
-            <i class="fab fa-java"></i>
-            <h3>Java Web</h3></div>
+              <i class="fab fa-java" style="color: #e51e23"></i>
+              <h3>Java Web</h3>
+            </div>
             <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p></div>
+              <p>Java é uma linguagem de programação, uma aplicação Java Web gera páginas Web interativas, que contêm vários tipos de linguagem de marcação (HTML, XML, etc) e conteúdo dinâmico.</p>
+            </div>
           </div>
         </div>
         <div class="row">
-          <div class="offset-md-2 col-md-3 text-md-start">
+          <div class="offset-md-1 col-md-5 text-md-start">
             <div class="tecnologia-header">
-            <i class="fab fa-js"></i>
-            <h3>Javascript</h3></div>
+              <i class="fab fa-js" style="color: #f0d81e"></i>
+              <h3>Javascript</h3>
+            </div>
             <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p></div>
+              <p>É uma linguagem de programação que permite a você implementar itens complexos em páginas web, É a terceira camada do bolo das tecnologias padrões da web seguindo o HTML e  oCSS</p>
+            </div>
           </div>
-          <div class="offset-md-2 col-md-3 text-md-start">
+          <div class="col-md-5 text-md-start">
             <div class="tecnologia-header">
-            <i class="fas fa-database"></i>
-            <h3>MySQL</h3></div>
+              <i class="fas fa-database" style="color: #1b4d68;"></i>
+              <h3>MySQL</h3>
+            </div>
             <div class="tecnologia-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur nemo assumenda eligendi
-              velit unde?</p></div>
+              <p>O MySQL é um sistema gerenciador de banco de dados relacional de código aberto usado na maioria das aplicações gratuitas para gerir suas bases de dados. Utiliza a linguagem SQL</p>
+            </div>
           </div>
         </div>
       </div>
@@ -136,22 +140,39 @@
     <!-- FINAL DO CONTEÚDO -->
 
     <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE RODAPÉ -->
-    <footer>
-      <div class="footer-content">
-        <p>Copyright &copy; 2021, GS - Todos os direitos reservados</p>
-        <div class="social-list">
-          <a href="https://www.facebook.com/guzt.santos/" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.linkedin.com/in/gs-santos/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/gssantos94/gssantos" target="_blank"><i class="fab fa-github"></i></a>
-          <i class="fas fa-ellipsis-v"></i>
-          <a href="https://google.com.br" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://google.com.br" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://google.com.br" target="_blank"><i class="fab fa-github"></i></a>
+      <footer class="bg-dark text-center text-white" style="padding-top: 1rem;">
+        <div class="container p-1">
+          <!-- Section: Social media -->
+          <section class="">
+            <!-- Facebook Gustavo -->
+            <a class="btn btn-outline-light btn-floating" href="https://www.facebook.com/guzt.santos/" role="button"
+              target="_blank"><i class="fab fa-facebook-f" style="color: #3b5998;"></i></a>
+
+            <!-- Linkedin Gustavo -->
+            <a class="btn btn-outline-light btn-floating" href="https://www.linkedin.com/in/gs-santos/"
+              role="button" target="_blank"><i class="fab fa-linkedin-in" style="color: #0e76a8;"></i></a>
+
+            <!-- Github Gustavo -->
+            <a class="btn btn-outline-light btn-floating" href="https://github.com/gssantos94/gssantos"
+              role="button" target="_blank"><i class="fab fa-github"></i></a>
+
+            <a>|</a><!-- ESPAÇADOR -->
+
+            <!-- Facebook Nicolas -->
+            <a class="btn btn-outline-light btn-floating" href="#" role="button"><i
+                class="fab fa-facebook-f" style="color: #3b5998;"></i></a>
+
+            <!-- Linkedin Nicolas -->
+            <a class="btn btn-outline-light btn-floating" href="#" role="button"><i
+                class="fab fa-linkedin-in" style="color: #0e76a8;"></i></a>
+
+            <!-- Github Nicolas -->
+            <a class="btn btn-outline-light btn-floating" href="#" role="button"><i class="fab fa-github"></i></a>
+            <p>&copy; 2021 Copyright: GS - Todos os direitos reservados</p>
+          </section>
         </div>
-      </div>
-    </footer>
-    <a href="#topo" id="link-topo"><i class="fas fa-arrow-up"></i></a>
-    <!-- FINAL DO RODAPÉ -->
+      </footer>
+      <a href="#topo" id="link-topo"><i class="fas fa-arrow-up"></i></a>
   </div>
   <!-- IRÁ VIRAR UM ARQUIVO HTML SEPARADO DE SCRIPTS GERAIS -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
