--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 </head>
 
 <body>
+
+  <!-- início do preloader -->
+  <div id="preloader">
+    <div class="inner">
+      <div class="bolas">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </div>
+  <!-- fim do preloader -->
+
+
   <header id="topo">
     <div class="img-wrapper">
       <img src="assets/img/background.jpg">
@@ -69,68 +83,74 @@
     <!-- FINAL DO MENU -->
 
     <!-- CONTEÚDO DO SITE -->
-    <section class="sessao-tecnologias" id="tecnologias">
-      <div class="sessao-header">
+    <section class="tecnologias" id="tecnologias">
+      <div class="main-titulo">
         <h1>Tecnologias Utilizadas</h1>
       </div>
       <div class="container text-center">
         <div class="row">
           <div class="offset-md-1 col-md-5 text-md-start">
-            <div class="tecnologia-header">
+            <div class="tec-titulo">
               <i class="fab fa-css3-alt" style="color: #0e76a8;"></i>
               <h3>CSS</h3>
             </div>
             <div class="tecnologia-text">
-              <p>É a sigla para Cascading Style Sheets, ou seja, Folhas de Estilo em Cascatas. É uma maneira de dar estilo ao código criado por linguagens como HTML, XML ou XHTML, entre outras.</p>
+              <p>É a sigla para Cascading Style Sheets, ou seja, Folhas de Estilo em Cascatas. É uma maneira de dar
+                estilo ao código criado por linguagens como HTML, XML ou XHTML, entre outras.</p>
             </div>
           </div>
           <div class="col-md-5 text-md-start">
-            <div class="tecnologia-header">
+            <div class="tec-titulo">
               <i class="fab fa-bootstrap" style="color: #533b77;"></i>
               <h3>Bootstrap 5</h3>
             </div>
             <div class="tecnologia-text">
-              <p>É uma ferramenta gratuita para desenvolvimento Web. Crie sites e aplicações completas com nosso sistemas de grid responsivo, componentes pré-construídos, entre outras features.</p>
+              <p>É uma ferramenta gratuita para desenvolvimento Web. Crie sites e aplicações completas com nosso
+                sistemas de grid responsivo, componentes pré-construídos, entre outras features.</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="offset-md-1 col-md-5 text-md-start">
-            <div class="tecnologia-header">
+            <div class="tec-titulo">
               <i class="fab fa-html5" style="color: #e55c25;"></i>
               <h3>HTML 5</h3>
             </div>
             <div class="tecnologia-text">
-              <p>O HTML5, sigla para Hypertext Markup Language, é uma linguagem de marcação de hipertexto para apresentar e estruturar o conteúdo de sites na  web HTML5 é a nova versão do HTML4</p>
+              <p>O HTML5, sigla para Hypertext Markup Language, é uma linguagem de marcação de hipertexto para
+                apresentar e estruturar o conteúdo de sites na web HTML5 é a nova versão do HTML4</p>
             </div>
           </div>
           <div class="col-md-5 text-md-start">
-            <div class="tecnologia-header">
+            <div class="tec-titulo">
               <i class="fab fa-java" style="color: #e51e23"></i>
               <h3>Java Web</h3>
             </div>
             <div class="tecnologia-text">
-              <p>Java é uma linguagem de programação, uma aplicação Java Web gera páginas Web interativas, que contêm vários tipos de linguagem de marcação (HTML, XML, etc) e conteúdo dinâmico.</p>
+              <p>Java é uma linguagem de programação, uma aplicação Java Web gera páginas Web interativas, que contêm
+                vários tipos de linguagem de marcação (HTML, XML, etc) e conteúdo dinâmico.</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="offset-md-1 col-md-5 text-md-start">
-            <div class="tecnologia-header">
+            <div class="tec-titulo">
               <i class="fab fa-js" style="color: #f0d81e"></i>
               <h3>Javascript</h3>
             </div>
             <div class="tecnologia-text">
-              <p>É uma linguagem de programação que permite a você implementar itens complexos em páginas web, É a terceira camada do bolo das tecnologias padrões da web seguindo o HTML e  oCSS</p>
+              <p>É uma linguagem de programação que permite a você implementar itens complexos em páginas web, É a
+                terceira camada do bolo das tecnologias padrões da web seguindo o HTML e oCSS</p>
             </div>
           </div>
           <div class="col-md-5 text-md-start">
-            <div class="tecnologia-header">
+            <div class="tec-titulo">
               <i class="fas fa-database" style="color: #1b4d68;"></i>
               <h3>MySQL</h3>
             </div>
             <div class="tecnologia-text">
-              <p>O MySQL é um sistema gerenciador de banco de dados relacional de código aberto usado na maioria das aplicações gratuitas para gerir suas bases de dados. Utiliza a linguagem SQL</p>
+              <p>O MySQL é um sistema gerenciador de banco de dados relacional de código aberto usado na maioria das
+                aplicações gratuitas para gerir suas bases de dados. Utiliza a linguagem SQL</p>
             </div>
           </div>
         </div>
@@ -140,45 +160,44 @@
     <!-- FINAL DO CONTEÚDO -->
 
     <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE RODAPÉ -->
-      <footer class="bg-dark text-center text-white" style="padding-top: 1rem;">
-        <div class="container p-1">
-          <!-- Section: Social media -->
-          <section class="">
-            <!-- Facebook Gustavo -->
-            <a class="btn btn-outline-light btn-floating" href="https://www.facebook.com/guzt.santos/" role="button"
-              target="_blank"><i class="fab fa-facebook-f" style="color: #3b5998;"></i></a>
+    <footer class="text-center">
+      <div class="container p-1">
+        <!-- Section: Social media -->
+        <section class="">
+          <!-- Facebook Gustavo -->
+          <a class="btn btn-outline-light btn-floating" href="https://www.facebook.com/guzt.santos/" role="button"
+            target="_blank"><i class="fab fa-facebook-f" style="color: #3b5998;"></i></a>
 
-            <!-- Linkedin Gustavo -->
-            <a class="btn btn-outline-light btn-floating" href="https://www.linkedin.com/in/gs-santos/"
-              role="button" target="_blank"><i class="fab fa-linkedin-in" style="color: #0e76a8;"></i></a>
+          <!-- Linkedin Gustavo -->
+          <a class="btn btn-outline-light btn-floating" href="https://www.linkedin.com/in/gs-santos/" role="button"
+            target="_blank"><i class="fab fa-linkedin-in" style="color: #0e76a8;"></i></a>
 
-            <!-- Github Gustavo -->
-            <a class="btn btn-outline-light btn-floating" href="https://github.com/gssantos94/gssantos"
-              role="button" target="_blank"><i class="fab fa-github"></i></a>
+          <!-- Github Gustavo -->
+          <a class="btn btn-outline-light btn-floating" href="https://github.com/gssantos94/gssantos" role="button"
+            target="_blank"><i class="fab fa-github"></i></a>
 
-            <a>|</a><!-- ESPAÇADOR -->
+          <a>|</a><!-- ESPAÇADOR -->
 
-            <!-- Facebook Nicolas -->
-            <a class="btn btn-outline-light btn-floating" href="#" role="button"><i
-                class="fab fa-facebook-f" style="color: #3b5998;"></i></a>
+          <!-- Facebook Nicolas -->
+          <a class="btn btn-outline-light btn-floating" href="#" role="button"><i class="fab fa-facebook-f"
+              style="color: #3b5998;"></i></a>
 
-            <!-- Linkedin Nicolas -->
-            <a class="btn btn-outline-light btn-floating" href="#" role="button"><i
-                class="fab fa-linkedin-in" style="color: #0e76a8;"></i></a>
+          <!-- Linkedin Nicolas -->
+          <a class="btn btn-outline-light btn-floating" href="#" role="button"><i class="fab fa-linkedin-in"
+              style="color: #0e76a8;"></i></a>
 
-            <!-- Github Nicolas -->
-            <a class="btn btn-outline-light btn-floating" href="#" role="button"><i class="fab fa-github"></i></a>
-            <p>&copy; 2021 Copyright: GS - Todos os direitos reservados</p>
-          </section>
-        </div>
-      </footer>
-      <a href="#topo" id="link-topo"><i class="fas fa-arrow-up"></i></a>
+          <!-- Github Nicolas -->
+          <a class="btn btn-outline-light btn-floating" href="#" role="button"><i class="fab fa-github"></i></a>
+          <p> 2021 &copy; Copyright - Todos os direitos reservados</p>
+        </section>
+      </div>
+    </footer>
+    <a href="#topo" id="link-topo"><i class="fas fa-arrow-up"></i></a>
   </div>
   <!-- IRÁ VIRAR UM ARQUIVO HTML SEPARADO DE SCRIPTS GERAIS -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/jquery.js"></script>
   <script src="assets/js/personalizado.js"></script>
-  <!-- FINAL DOS SCRIPTS -->
 </body>
 
 </html>
