:package: Adicionadas as páginas temporárias da entrega 1

--- a/usuarios.html
+++ b/usuarios.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="assets/css/all.css">
   <link rel="stylesheet" href="assets/css/personalizado.css">
   <!-- FINAL DO CABEÇALHO -->
-  <title>Gestão Financeiro</title>
+  <title>Usuários</title>
 </head>
 
 <body>
@@ -30,20 +30,7 @@
   </div>
   <!-- fim do preloader -->
 
-
-  <header id="topo">
-    <div class="img-wrapper">
-      <img src="assets/img/background.jpg">
-    </div>
-    <div class="banner">
-      <h1>Gestão Financeira</h1>
-      <h2>Créd & Déb</h2>
-      <p>Gustavo Santos & Nicolas Bicalho</p>
-      <a type="button" href="#tecnologias">Saiba mais</a>
-    </div>
-  </header>
-  <div class="pag-home">
-    <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE MENU -->
+  <div class="pag-temporarias">
     <div class="hamburger">
       <div class="line" id="line1"></div>
       <div class="line" id="line2"></div>
@@ -83,81 +70,89 @@
     <!-- FINAL DO MENU -->
 
     <!-- CONTEÚDO DO SITE -->
-    <section class="tecnologias" id="tecnologias">
-      <div class="main-titulo">
-        <h1>Tecnologias Utilizadas</h1>
-      </div>
-      <div class="container text-center">
+    <main>
+      <section class="container">
+        <h1 class="text-center p-4" id="topo">
+          Formulário de Usuários
+        </h1>
         <div class="row">
-          <div class="offset-md-1 col-md-5 text-md-start">
-            <div class="tec-titulo">
-              <i class="fab fa-css3-alt" style="color: #0e76a8;"></i>
-              <h3>CSS</h3>
-            </div>
-            <div class="tecnologia-text">
-              <p>É a sigla para Cascading Style Sheets, ou seja, Folhas de Estilo em Cascatas. É uma maneira de dar
-                estilo ao código criado por linguagens como HTML, XML ou XHTML, entre outras.</p>
-            </div>
+          <div class="col-md-2 text-center">
+            <form action="" class="form-temporario p-md-0">
+              <i class="fab fa-2x fa-creative-commons-share"></i>
+              <h1 class="h3 mb-1">Criar</h1>
+              <div class="form-temporario mb-2">
+                <input name="nome" type="text" class="form-control mb-2" placeholder="Nome" maxlength="20"
+                  required>
+                <input name="cpf" type="text" class="form-control mb-2" placeholder="CPF" id="cpf"
+                  required>
+                <input name="password" type="text" class="form-control mb-2" placeholder="Senha"
+                  required>
+                <input name="text" type="text" class="form-control" placeholder="Suspenso"
+                  required>
+              </div>
+              <button class="btn btn-lg btn-primary" type="submit">Criar</button>
+            </form>
           </div>
-          <div class="col-md-5 text-md-start">
-            <div class="tec-titulo">
-              <i class="fab fa-bootstrap" style="color: #533b77;"></i>
-              <h3>Bootstrap 5</h3>
+          <div class="col-md-2 text-center"">
+            <form action="" class=" form-temporario p-4 p-md-0">
+            <i class="far fa-2x fa-edit"></i>
+            <h1 class="h3 mb-1">Editar</h1>
+            <div class="form-temporario mb-2">
+              <input name="id" type="text" class="form-control mb-2" placeholder="Id" readonly>
+              <input name="nome" type="text" class="form-control mb-2" placeholder="Nome" maxlength="20"
+              required>
+            <input name="cpf" type="text" class="form-control mb-2" placeholder="CPF" id="cpf"
+              required>
+            <input name="password" type="text" class="form-control mb-2" placeholder="Senha"
+              required>
+            <input name="text" type="text" class="form-control" placeholder="Suspenso"
+              required>
             </div>
-            <div class="tecnologia-text">
-              <p>É uma ferramenta gratuita para desenvolvimento Web. Crie sites e aplicações completas com nosso
-                sistemas de grid responsivo, componentes pré-construídos, entre outras features.</p>
-            </div>
+            <button class="btn mb-2 btn-lg btn-primary" type="submit">Editar</button>
+            </form>
           </div>
-        </div>
-        <div class="row">
-          <div class="offset-md-1 col-md-5 text-md-start">
-            <div class="tec-titulo">
-              <i class="fab fa-html5" style="color: #e55c25;"></i>
-              <h3>HTML 5</h3>
-            </div>
-            <div class="tecnologia-text">
-              <p>O HTML5, sigla para Hypertext Markup Language, é uma linguagem de marcação de hipertexto para
-                apresentar e estruturar o conteúdo de sites na web HTML5 é a nova versão do HTML4</p>
-            </div>
+          <div class="col-md-8">
+            <table class="table table-sm" id="tabela-usuarios">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Nome</th>
+                  <th scope="col">CPF</th>
+                  <th scope="col">Senha</th>
+                  <th scope="col">Suspenso</th>
+                  <th scope="col">Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Teste de Linha 1 com</td>
+                  <td>Teste de Linha 1 com</td>
+                  <td>Teste de Linha 1 com</td>
+                  <td>N</td>
+                  <th scope="row">
+                    <a class="btn" href="#""><i class=" far fa-edit"></i></a>
+                    <a class="btn" href="#"><i class="fas fa-trash-alt"></i></a>
+                  </th>
+                </tr>
+                <tr>
+                  <th scope="row">999</th>
+                  <td>Teste de Linha 1 com</td>
+                  <td>Teste de Linha 1 com</td>
+                  <td>Teste de Linha 1 com</td>
+                  <td>N</td>
+                  <th scope="row">
+                    <a class="btn" href="#""><i class=" far fa-edit"></i></a>
+                    <a class="btn" href="#"><i class="fas fa-trash-alt"></i></a>
+                  </th>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <div class="col-md-5 text-md-start">
-            <div class="tec-titulo">
-              <i class="fab fa-java" style="color: #e51e23"></i>
-              <h3>Java Web</h3>
-            </div>
-            <div class="tecnologia-text">
-              <p>Java é uma linguagem de programação, uma aplicação Java Web gera páginas Web interativas, que contêm
-                vários tipos de linguagem de marcação (HTML, XML, etc) e conteúdo dinâmico.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="offset-md-1 col-md-5 text-md-start">
-            <div class="tec-titulo">
-              <i class="fab fa-js" style="color: #f0d81e"></i>
-              <h3>Javascript</h3>
-            </div>
-            <div class="tecnologia-text">
-              <p>É uma linguagem de programação que permite a você implementar itens complexos em páginas web, É a
-                terceira camada do bolo das tecnologias padrões da web seguindo o HTML e oCSS</p>
-            </div>
-          </div>
-          <div class="col-md-5 text-md-start">
-            <div class="tec-titulo">
-              <i class="fas fa-database" style="color: #1b4d68;"></i>
-              <h3>MySQL</h3>
-            </div>
-            <div class="tecnologia-text">
-              <p>O MySQL é um sistema gerenciador de banco de dados relacional de código aberto usado na maioria das
-                aplicações gratuitas para gerir suas bases de dados. Utiliza a linguagem SQL</p>
-            </div>
-          </div>
-        </div>
-      </div>
 
-    </section>
-    <!-- FINAL DO CONTEÚDO -->
+        </div>
+      </section>
+    </main>
 
     <!-- IRÁ VIRAR UM ARQUIVO JSP SEPARADO DE RODAPÉ -->
     <footer class="text-center">
