--- a/login.html
+++ b/login.html
@@ -33,10 +33,10 @@
             <a href="index.html" class="menu-link">Home</a>
           </li>
           <li class="menu-item">
-            <a href="#" class="menu-link">Administrador</a>
+            <a href="administradores.html" class="menu-link">Administrador</a>
           </li>
           <li class="menu-item">
-            <a href="#" class="menu-link">Categoria</a>
+            <a href="categorias.html" class="menu-link">Categoria</a>
           </li>
           <li class="menu-item">
             <a href="#" class="menu-link">Conta</a>
@@ -45,7 +45,7 @@
             <a href="#" class="menu-link">Lançamento</a>
           </li>
           <li class="menu-item">
-            <a href="#" class="menu-link">Usuário</a>
+            <a href="usuarios.html" class="menu-link">Usuário</a>
           </li>
         </ul>
       </nav>
